--- a/style/nav.css
+++ b/style/nav.css
@@ -1,4 +1,4 @@
-nav ul{
+nav> ul{
     display: flex;
 }
 nav li {
@@ -13,4 +13,7 @@ nav li a{
     text-decoration: none;
     color: black;
     font-size: 20px;
+}
+.dropdown{
+    display: none;
 }
