--- a/style/nav.css
+++ b/style/nav.css
@@ -14,6 +14,16 @@ nav li a{
     color: black;
     font-size: 20px;
 }
+nav > ul >li:hover >ul{
+    display: block;
+}
 .dropdown{
     display: none;
+    position: absolute;
+    background-color: lightpink;
+    padding: 0;
+}
+.dropdown li{
+    padding: 0 20px;
+    margin: 0;
 }
